enable preview features and set logback version to 1.5.18